--- a/charts/adservice/templates/deployment.yaml
+++ b/charts/adservice/templates/deployment.yaml
@@ -22,13 +22,13 @@ spec:
           value: "9555"
         - name: JAEGER_SERVICE_ADDR
           value: "jaeger-collector.observability.svc.cluster.local:14268"
-        resources:
-          requests:
-            cpu: 200m
-            memory: 180Mi
-          limits:
-            cpu: 300m
-            memory: 300Mi
+        # resources:
+        #   requests:
+        #     cpu: 200m
+        #     memory: 180Mi
+        #   limits:
+        #     cpu: 300m
+        #     memory: 300Mi
         readinessProbe:
           initialDelaySeconds: 20
           periodSeconds: 15
