--- a/charts/cartservice/templates/deployment.yaml
+++ b/charts/cartservice/templates/deployment.yaml
@@ -23,13 +23,13 @@ spec:
           value: "7070"
         - name: LISTEN_ADDR
           value: "0.0.0.0"
-        resources:
-          requests:
-            cpu: 200m
-            memory: 64Mi
-          limits:
-            cpu: 300m
-            memory: 128Mi
+        # resources:
+        #   requests:
+        #     cpu: 200m
+        #     memory: 64Mi
+        #   limits:
+        #     cpu: 300m
+        #     memory: 128Mi
         readinessProbe:
           initialDelaySeconds: 15
           exec:
