--- a/charts/loadgenerator/templates/deployment.yaml
+++ b/charts/loadgenerator/templates/deployment.yaml
@@ -33,10 +33,10 @@ spec:
           value: "{{ .Values.ingress.host }}:80"
         - name: USERS
           value: "10"
-        resources:
-          requests:
-            cpu: 300m
-            memory: 256Mi
-          limits:
-            cpu: 500m
-            memory: 512Mi
+        # resources:
+        #   requests:
+        #     cpu: 300m
+        #     memory: 256Mi
+        #   limits:
+        #     cpu: 500m
+        #     memory: 512Mi
