--- a/charts/emailservice/templates/deployment.yaml
+++ b/charts/emailservice/templates/deployment.yaml
@@ -19,23 +19,23 @@ spec:
         env:
         - name: PORT
           value: "8080"
-        # readinessProbe:
-        #   periodSeconds: 5
-        #   exec:
-        #     command: ["/bin/grpc_health_probe", "-addr=:8080"]
-        # livenessProbe:
-        #   periodSeconds: 5
-        #   exec:
-        #     command: ["/bin/grpc_health_probe", "-addr=:8080"]
         - name: DISABLE_TRACING
           value: "1"
         - name: DISABLE_PROFILER
           value: "1"
-        resources:
-          requests:
-            cpu: 100m
-            memory: 64Mi
-          limits:
-            cpu: 200m
-            memory: 128Mi
+        readinessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "-addr=:8080"]
+        livenessProbe:
+          periodSeconds: 5
+          exec:
+            command: ["/bin/grpc_health_probe", "-addr=:8080"]
+        # resources:
+        #   requests:
+        #     cpu: 100m
+        #     memory: 64Mi
+        #   limits:
+        #     cpu: 200m
+        #     memory: 128Mi
 
