--- a/charts/paymentservice/templates/deployment.yaml
+++ b/charts/paymentservice/templates/deployment.yaml
@@ -25,11 +25,11 @@ spec:
         livenessProbe:
           exec:
             command: ["/bin/grpc_health_probe", "-addr=:50051"]
-        resources:
-          requests:
-            cpu: 100m
-            memory: 64Mi
-          limits:
-            cpu: 200m
-            memory: 128Mi
+        # resources:
+        #   requests:
+        #     cpu: 100m
+        #     memory: 64Mi
+        #   limits:
+        #     cpu: 200m
+        #     memory: 128Mi
 
