--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,28 @@ on:
   push:
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: helmwave/setup-action@v0.2.0
+      name: Install helmwave
+      with:
+        version: "0.18.0"
+    - name: plan
+      run: helmwave build --yml
+    - name: Scan repo with kube-linter
+      uses: stackrox/kube-linter-action@v1.0.4
+      with:
+        directory: .helmwave
+    - name: Kubeval
+      uses: "brpaz/gh-kubeval-action@master"
+      with:
+        files: ".helmwave/manifest/*.yml"
+        github_token: "${{ secrets.GITHUB_TOKEN }}"
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v2
       - name: Create k8s Kind Cluster
