--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,26 +6,25 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: helmwave/setup-action@v0.2.0
-      name: Install helmwave
-      with:
-        version: "0.18.0"
-    - name: plan
-      run: helmwave build --yml
-    - name: Scan repo with kube-linter
-      uses: stackrox/kube-linter-action@v1.0.4
-      with:
-        directory: .helmwave
-    - name: Kubeval
-      uses: "brpaz/gh-kubeval-action@master"
-      with:
-        files: ".helmwave/manifest/*.yml"
-        github_token: "${{ secrets.GITHUB_TOKEN }}"
-    - name: Download Pluto
-      uses: FairwindsOps/pluto/github-action@master
-    - name: Use pluto
-      run: |
-        pluto detect-files -d .helmwave/
+      - uses: helmwave/setup-action@v0.2.0
+        name: Install helmwave
+        with:
+          version: "0.18.0"
+      - name: plan
+        run: helmwave build --yml
+      - name: Scan repo with kube-linter
+        uses: stackrox/kube-linter-action@v1.0.4
+        with:
+          directory: .helmwave
+      - name: test
+        uses: instrumenta/kubeval-action@master
+        with:
+          files: .helmwave/manifests/
+      - name: Download Pluto
+        uses: FairwindsOps/pluto/github-action@master
+      - name: Use pluto
+        run: |
+          pluto detect-files -d .helmwave/
   deploy:
     runs-on: ubuntu-latest
     needs: test
