--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           version: "0.18.0"
       - name: plan
-        run: helmwave build --yml --diff-mode "local"
+        run: helmwave build --diff-mode=local --yml
       - name: Scan repo with kube-linter
         uses: stackrox/kube-linter-action@v1.0.4
         with:
