--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,10 @@ jobs:
           else
               echo "CI_ENVIRONMENT_NAME=stage" >> "$GITHUB_ENV"
           fi
-          echo "CI_ENVIRONMENT_NAME is $CI_ENVIRONMENT_NAME"
       - name: plan
-        run: helmwave build --yml
+        run: |
+          echo "Building plan for $CI_ENVIRONMENT_NAME"
+          helmwave build --yml
       - name: Scan repo with kube-linter
         uses: stackrox/kube-linter-action@v1.0.4
         with:
@@ -57,6 +58,10 @@ jobs:
           fi
           echo "CI_ENVIRONMENT_NAME is $CI_ENVIRONMENT_NAME"
       - name: plan
-        run: helmwave build --yml --diff-mode=local
+        run: |
+          echo "Building plan for $CI_ENVIRONMENT_NAME"
+          helmwave build --yml --diff-mode=local
       - name: deploy
-        run: helmwave up --kubedog
+        run: |
+          echo "Deploying to $CI_ENVIRONMENT_NAME"
+          helmwave up --kubedog
